# numerical-methods

./: .gitignore  .travis.yml  README.md  numerical-methods.cabal  stack.yaml
src/: Main.hs
src/ch_02/: Ch_02.hs
src/ch_03/: Ch_03.hs
src/ch_04/: Ch_04.hs
src/ch_06/: Ch_06.hs
src/ch_07/: Ch_07.hs
src/ch_09/: Ch_09.hs
test/: Test.hs  Test_Ch_02.hs  Test_Ch_06.hs  Test_Ch_07.hs  Test_Ch_09.hs
