name: numerical-methods
version: 0.15.6.2
cabal-version: >=1.18
build-type: Simple
license: GPL-2
license-file: LICENSE
maintainer: mer3ef@virginia.edu
synopsis: Developing the numerical methods from Classical and Mordern Numerical Analysis
description:
    I'm just really playing around with haskell and cabal.
    I wouldn't depend on this as a numerical library in h-
    askell. Rather use this as a guide to introducing ide-
    as about haskell and getting a clear idea of how to d-
    o things.
category: Math
author: Marcus Rosti

source-repository head
    type: git
    location: git@github.com:Marcus-Rosti/numerical_methods.git

library
    exposed-modules:
        Ch_02
        Ch_03
        Ch_06
        Ch_07
        Ch_09
    build-depends:
        base >=4.6,
        parallel -any
    default-language: Haskell2010
    hs-source-dirs: src/ch_02 src/ch_03 src/ch_06 src/ch_07 src/ch_09
    ghc-options: -Wall

executable numerical-methods
    main-is: Main.hs
    build-depends:
        base >=4.6,
        Cabal >=1.18,
        parallel -any,
        numerical-methods -any
    default-language: Haskell2010
    hs-source-dirs: src
    ghc-options: -threaded -rtsopts -with-rtsopts=-N -S -s

test-suite tests
    type: exitcode-stdio-1.0
    main-is: Test.hs
    build-depends:
        base >=4.6,
        Cabal >=1.18,
        tasty >=0.10,
        tasty-hunit >=0.9,
        tasty-quickcheck -any,
        tasty-smallcheck -any,
        numerical-methods -any
    default-language: Haskell2010
    hs-source-dirs: test
    other-modules:
        Test_Ch_02
        Test_Ch_06
        Test_Ch_07
        Test_Ch_09
